# learn-to-solve-games

./: .gitignore  .gitmodules  pyproject.toml
scripts/: generate_traffic_dataset.py  rotational_field_sandbox.py  traffic_equilibrium_sandbox.py  train_field_gnn.py  train_field_mlp.py
src/l2s_games/: algorithms.py  callbacks.py  data.py  datasets.py  dynamics.py  models.py  operator_count.py  pume_solver.py  rollout_sampling.py  transforms.py  viz.py
src/l2s_games/envs/: __init__.py  base.py  matrix.py  pume_traffic.py  rps.py  toy.py  traffic.py
src/l2s_games/models/: __init__.py  base.py  graphormer.py  mlp.py
