[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-to-solve-games"
version = "0.1.0"
description = "Learn to solve games."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "lightning",
]

[tool.setuptools.packages.find]
where = ["src"]
