[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-to-solve-games"
version = "0.1.0"
description = "Learn to solve games."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning",
    "matplotlib",
    "numpy",
    "torch_geometric",
    "torch>=2.0",
    "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]
